[package]
name = "rspack"
version = "0.1.0"
edition = "2021"


[dependencies]
rspack_plugin_schemes= { git = "https://github.com/web-infra-dev/rspack", branch = "main"}
rspack_ids= { git = "https://github.com/web-infra-dev/rspack", branch = "main"}
rspack_binding_options= { git = "https://github.com/web-infra-dev/rspack", branch = "main"}
rspack_hook= { git = "https://github.com/web-infra-dev/rspack", branch = "main", package = "rspack_hook"}
rspack_plugin_javascript= { git = "https://github.com/web-infra-dev/rspack", branch = "main", package = "rspack_plugin_javascript"}
rspack_error = { git = "https://github.com/web-infra-dev/rspack", branch = "main", package = "rspack_error"}
rspack_core = { git = "https://github.com/web-infra-dev/rspack", branch = "main"}
rspack_plugin_entry = { git = "https://github.com/web-infra-dev/rspack", branch = "main", package = "rspack_plugin_entry" }
rspack_fs = { git = "https://github.com/web-infra-dev/rspack", branch = "main", package = "rspack_fs" }
serde_json = "1.0.113"
tokio = {features = ["rt", "macros"], version = "1.38.0"}
lightningcss = { version = "1.0.0-alpha.57", features = []}
miette = { version = "*"}