[package]
name = "rspack-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rspack_plugin_schemes= { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin", version = "*"}
rspack_ids= { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin"}
rspack_binding_options= { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin"}
rspack_hook= { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin", package = "rspack_hook"}
rspack_plugin_javascript= { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin", package = "rspack_plugin_javascript"}
rspack_error = { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin", package = "rspack_error"}
rspack_core = { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin"}
rspack_plugin_entry = { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin", package = "rspack_plugin_entry"}
rspack_plugin_externals = { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin", package = "rspack_plugin_externals" }
rspack_fs = { git = "https://github.com/web-infra-dev/rspack", branch = "feat/rspack_http_uri_plugin", package = "rspack_fs" }
serde_json = "1.0.113"
base64 = "0.22.1"
tokio = {features = ["full"], version = "1.38.0"}
miette = { version = "*" }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.6.0"
pretty_env_logger = "0.5.0"
url = "2.5.2"
form_urlencoded = "1"
futures = "0.3.30"
async-trait = "0.1.80"
rsfs = "0.4.1"
[features]
async = []
